@@ -25,6 +25,7 @@ v0.5.0, 2015-??-?? -- ???
      * removed s3_conn args from methods in EMRJobRunner and S3Filesystem
      * removed iam_job_flow_role option (use iam_instance_profile)
      * removed support for _$folder$ keys, which EMR no longer creates
+     * custom hadoop_streaming_jar gets properly uploaded
    * Hadoop
      * hdfs_scratch_dir option is now hadoop_tmp_dir (#318)
  * removed mrjob.compat.get_jobconf_value() (use jobconf_from_env())
